welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: not found: value i
    ecritMessage(i)
                 ^